syntax = "proto3";

package internal;

message AccountCredited{
    int32 amount = 1;
}
