syntax = "proto3";

package internal;

message AccountDeposited{
    int32 amount = 1;
}
