syntax = "proto3";

package internal;

message GogoAccountCredited{
    int32 amount = 1;
}
