syntax = "proto3";

package internal;

message GogoAccountDeposited{
    int32 amount = 1;
}
